updated auth page to show login on landing; updated issue with absolute positioning on mobile navbar causing display overlap

--- a/client/src/components/navigation/styles/MobileNavbar.module.css
+++ b/client/src/components/navigation/styles/MobileNavbar.module.css
@@ -37,12 +37,9 @@
     font-size: 32px;
 }
 .name {
-    position: absolute;
     font-size: 12px;
     display: grid;
     place-items: center;
-    bottom: -3px;
-
 }
 .active {
     color: var(--COLOR-ALT);
